# lesa

./: .gitignore  README.md  main.py  main2.py  pyproject.toml
.github/workflows/: release.yml
lesa/cli/: main.py
lesa/core/: conversation_manager.py  conversations.py  directory_manager.py  document_manager.py  ollama.py  ollama_manager.py
lesa/scratch/: main.py
lesa/tests/: main.py  notebook.ipynb
lesa/utils/: directory_manager.py  pre_prompt.py
scripts/: setup-ollama.sh
