[tool.poetry]
name = "lesa"
version = "0.1.0"
description = ""
authors = ["Shantanu Wable <shantanuwable2003@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.2"
requests = "^2.32.3"
rich = "^13.9.4"
psutil = "^6.1.0"
python-docx = "^1.1.2"
pypdf2 = "^3.0.1"
textract = "^1.6.5"
typer = "^0.14.0"
chromadb = "^0.5.21"
pandas = "^2.2.3"
chroma-haystack = "^1.0.0"
haystack-ai = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
