[tool.poetry]
name = "lesa"
version = "0.1.0.6"
description = "A CLI tool to converse with any document locally using Ollama."
authors = ["Shantanu Wable <shantanuwable2003@gmail.com>", "Omkar Wagholikar <omkarrwagholikar@gmail.com>"]
repository = "https://github.com/shxntanu/lesa"
keywords = ["lesa", "rag pipeline", "document chatbot"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10.14,<3.13"
ollama = "^0.4.2"
requests = "^2.32.3"
rich = "^13.9.4"
psutil = "^6.1.0"
python-docx = "^1.1.2"
typer = "^0.14.0"
pandas = "^2.2.3"
six = "^1.16.0"
torch = "^2.5.1"
sentence-transformers = "^3.3.1"
markdown-it-py = "^3.0.0"
mdit-plain = "^1.0.1"
pypdf = "^5.1.0"
platformdirs = "^4.3.6"
faiss-cpu = "^1.9.0.post1"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
langchain-ollama = "^0.2.2"
docx2txt = "^0.8"
langchain-huggingface = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
pre-commit = "^4.0.1"
deepeval = "^2.0.9"

[tool.poetry.scripts]
lesa = "lesa.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
